--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Athos Conde de la Fère. It uses data from mapbox and darksy APIs</p>
         <img class="portrait" src="/img/profile.jpeg">   
     </div>
 
